# wasm-envoy-experiments

./: README.md
.github/workflows/: ci.yml  release.yml
ext-proc-service/: Cargo.toml  Dockerfile  build.rs  config.example.yaml
ext-proc-service/deploy/: kubernetes.yaml
ext-proc-service/proto/proto_mutation/v1/: service.proto
ext-proc-service/src/: config.rs  main.rs  mutation.rs  service.rs
grpc-proto-extract/: Cargo.toml  Makefile
grpc-proto-extract/deploy/: wasmplugin.yaml
grpc-proto-extract/src/: config.rs  grpc.rs  http_context.rs  lib.rs  proto_decode.rs  root_context.rs
response-capture/: Cargo.toml  Makefile
response-capture/deploy/: wasmplugin.yaml
response-capture/src/: config.rs  http_context.rs  lib.rs  root_context.rs
wasm-proto-filter/: Cargo.toml  Makefile
wasm-proto-filter/.cargo/: config.toml
wasm-proto-filter/deploy/: wasmplugin.yaml
wasm-proto-filter/src/: config.rs  ext_proc.rs  grpc.rs  http_context.rs  lib.rs  proto_decode.rs  proto_encode.rs  root_context.rs
